--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -30,7 +30,9 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: npm run test
+        run: |
+          wait
+          npm run test
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
