--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -31,7 +31,10 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: |
-          wait 10
+          sleep 10 &
+          pid=$!
+          echo "开始等待 10 秒..."
+          wait $pid
           npm run test
 
       # Runs a set of commands using the runners shell
