--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -33,12 +33,14 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: |
-          ls
+          cat ./a.txt
+          echo "Hello, World!" > a.txt
           npm run test
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
+          cat ./a.txt
           echo Add other actions to build,
           echo test, and deploy your project.
           npm run test
